Added Separtaor for sections

--- a/Final/index.html
+++ b/Final/index.html
@@ -60,6 +60,21 @@
         </p>
       </div>
       <!-- SIDE NOTE ENDING FOR MAP -->
+      <div class="separator">
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+      </div>
+      <!-- SEPARATOR END -->
       <div class="filter-method-container">
         <h3>Filter Method</h3>
         <div class="countries-container">
