Added Push and Pop methods

--- a/Final/index.html
+++ b/Final/index.html
@@ -138,6 +138,49 @@
         <p>🌟The filter() method does not change the original array.</p>
       </div>
       <!-- SIDE NOTE ENDING FOR FILTER -->
+      <div class="separator">
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+      </div>
+      <!-- SEPARATOR END -->
+      <div class="push-pop-container">
+        <h3>Push and Pop methods</h3>
+        <div class="push-pop-method">
+          <div class="push-pop-array left-array"></div>
+          <button id="push-btn" data-push-pop="push">Push</button>
+          <div class="push-pop-array right-array"></div>
+        </div>
+      </div>
+      <!-- PUSH POP METHOD END -->
+      <div class="side-note">
+        <p>🌟The push() and pop() methods changes the original array.</p>
+      </div>
+      <!-- SIDE NOTE ENDING FOR PUSH AND POP -->
+      <div class="separator">
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+      </div>
+      <!-- SEPARATOR END -->
     </section>
   </body>
 </html>
