Shift Method Added

--- a/Final/index.html
+++ b/Final/index.html
@@ -181,6 +181,54 @@
         <div class="separator-blank"></div>
       </div>
       <!-- SEPARATOR END -->
+      <div class="shift-unshift-container">
+        <!-- SHIFT - CONTAINER -->
+        <div class="shift-container">
+          <h3>Shift() method</h3>
+          <p class="para-padding">
+            The shift() method of Array instances removes the first element from
+            an array and returns that removed element. This method changes the
+            length of the array.
+          </p>
+          <div class="shift-array-container">
+            <p>Cerebrum,</p>
+            <p>Cerebellum,</p>
+            <p>Brain stem,</p>
+            <p>Amygdala,</p>
+            <p>Thalamus,</p>
+            <p>Occipital lobe,</p>
+            <p>Temporal lobe,</p>
+          </div>
+          <button id="shift-btn">Shift</button>
+          <p>Removed first element ➡<span id="shift-span">[-----]</span></p>
+        </div>
+
+        <!-- UNSHIFT - CONTAINER -->
+        <div class="unshift-container">
+          <h3>Unshift() method</h3>
+          <p>
+            The unshift() method of Array instances adds the specified elements
+            to the beginning of an array and returns the new length of the
+            array.
+          </p>
+        </div>
+      </div>
+      <!-- SHIFT AND UNSHIFT METHODS END -->
+      <div class="separator">
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+      </div>
+      <!-- SEPARATOR END -->
     </section>
   </body>
 </html>
