Unshift Method Added

--- a/Final/index.html
+++ b/Final/index.html
@@ -185,7 +185,7 @@
         <!-- SHIFT - CONTAINER -->
         <div class="shift-container">
           <h3>Shift() method</h3>
-          <p class="para-padding">
+          <p class="para-padding para-mar-top">
             The shift() method of Array instances removes the first element from
             an array and returns that removed element. This method changes the
             length of the array.
@@ -206,11 +206,20 @@
         <!-- UNSHIFT - CONTAINER -->
         <div class="unshift-container">
           <h3>Unshift() method</h3>
-          <p>
+          <p class="para-padding">
             The unshift() method of Array instances adds the specified elements
             to the beginning of an array and returns the new length of the
             array.
           </p>
+          <div class="unshift-array-container"></div>
+          <div class="unshit-array-input-container">
+            <input
+              type="text"
+              class="unshit-array-input"
+              placeholder="Add element to the front"
+            />
+            <button id="unshift-btn">Unshift</button>
+          </div>
         </div>
       </div>
       <!-- SHIFT AND UNSHIFT METHODS END -->
