Reduce method Added Maybe final change

--- a/Final/index.html
+++ b/Final/index.html
@@ -238,6 +238,58 @@
         <div class="separator-blank"></div>
       </div>
       <!-- SEPARATOR END -->
+      <div class="reduce-method-container">
+        <h3>Reduce() Method</h3>
+        <p class="para-mar-top para-padding">
+          The reduce() method of Array instances executes a user-supplied
+          "reducer" callback function on each element of the array, in order,
+          passing in the return value from the calculation on the preceding
+          element. The final result of running the reducer across all elements
+          of the array is a single value.
+        </p>
+        <div class="red-array-container">
+          <p class="red-array-item">9</p>
+          <p class="red-array-item">18</p>
+          <p class="red-array-item">27</p>
+          <p class="red-array-item">36</p>
+          <p class="red-array-item">45</p>
+        </div>
+        <div class="reduce-container">
+          <div class="reduce-input-container">
+            <label for="reduce-select">Select Operation for reducer</label>
+            <select name="" id="reduce-select">
+              <option value="Add">Add</option>
+              <option value="Subtract">Subtract</option>
+              <option value="Multiply">Multiply</option>
+              <option value="Divide">Divide</option>
+            </select>
+          </div>
+          <!-- o/p -->
+          <div class="reduce-output-container">
+            <p>Accumulated So far => <span class="red-span">0</span></p>
+            <div class="red-result-container">
+              <p>Used List So far</p>
+              <span class="red-list">9</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- REDUCE END -->
+        <div class="separator">
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+        <div class="separator-blank"></div>
+      </div>
+      <!-- SEPARATOR END -->
     </section>
   </body>
 </html>
