Navbar Another Version added

--- a/Final/index.html
+++ b/Final/index.html
@@ -18,8 +18,17 @@
   </head>
   <body>
     <section class="section-main">
-      <div class="main-heading">
-        <h1>Array Methods</h1>
+      <div class="nav-bar-container">
+        <h1 class="main-heading">Array Methods</h1>
+        <li class="hamburger-icon"><a>&#9776</a></li>
+        <ul class="methods-links-container">
+          <li><a>Map</a></li>
+          <li><a>Filter</a></li>
+          <li><a>Push/Pop</a></li>
+          <li><a>Shift/Unshift</a></li>
+          <li><a>Reduce</a></li>
+         
+        </ul>
       </div>
       <!-- MAIN HEADING END -->
       <div class="array-def-container">
@@ -31,7 +40,7 @@
         </p>
       </div>
       <!-- ARRAY DEFINITION ENDING -->
-      <div class="map-method-container">
+      <div class="map-method-container" id="map-method-id">
         <h3>Map Method</h3>
         <p class="para-padding">
           The map() method of Array instances creates a new array populated with
@@ -75,7 +84,7 @@
         <div class="separator-blank"></div>
       </div>
       <!-- SEPARATOR END -->
-      <div class="filter-method-container">
+      <div class="filter-method-container" id="filter-method-id">
         <h3>Filter Method</h3>
         <div class="countries-container">
           <div class="all-countries-container">
@@ -153,7 +162,7 @@
         <div class="separator-blank"></div>
       </div>
       <!-- SEPARATOR END -->
-      <div class="push-pop-container">
+      <div class="push-pop-container" id="push-pop-method-id">
         <h3>Push and Pop methods</h3>
         <div class="push-pop-method">
           <div class="push-pop-array left-array"></div>
@@ -181,7 +190,7 @@
         <div class="separator-blank"></div>
       </div>
       <!-- SEPARATOR END -->
-      <div class="shift-unshift-container">
+      <div class="shift-unshift-container" id="shift-unshift-method-id">
         <!-- SHIFT - CONTAINER -->
         <div class="shift-container">
           <h3>Shift() method</h3>
@@ -238,7 +247,7 @@
         <div class="separator-blank"></div>
       </div>
       <!-- SEPARATOR END -->
-      <div class="reduce-method-container">
+      <div class="reduce-method-container" id="reduce-method-id">
         <h3>Reduce() Method</h3>
         <p class="para-mar-top para-padding">
           The reduce() method of Array instances executes a user-supplied
@@ -275,7 +284,7 @@
         </div>
       </div>
       <!-- REDUCE END -->
-        <div class="separator">
+      <div class="separator">
         <div class="separator-blank"></div>
         <div class="separator-blank"></div>
         <div class="separator-blank"></div>
